--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,3 +6,8 @@
     background-color: #FFF
 .disable
     background-color: #E7E6E1
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body
+    font-family: 'Roboto', sans-serif;
