--- a/sass/blocks/_subheader.sass
+++ b/sass/blocks/_subheader.sass
@@ -5,6 +5,7 @@
     &-block
         display: flex
         &__category
+            margin-left: 25px
             color: #058DC7
             &::after
                 content: ">"
