--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -7,7 +7,7 @@
 .disable
     background-color: #E7E6E1
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
 
 body
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif
