--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,4 +1,5 @@
 .container
+    box-sizing: border-box
     max-width: 1700px
     width: 95%
     margin: 0 auto
@@ -11,3 +12,14 @@
 
 body
     font-family: 'Roboto', sans-serif
+
+th
+    border-bottom: 1px solid #D1CFD7
+    padding: 7px 10px
+    color: #8D8F93
+td
+    border-bottom: 1px solid #D1CFD7
+    padding: 7px 10px
+caption
+    text-align: left
+    margin-bottom: 26px
