--- a/sass/blocks/_main-section.sass
+++ b/sass/blocks/_main-section.sass
@@ -1,5 +1,6 @@
 .main-section
     display: flex
+    height: 100%
 .peoples
     min-width: 340px
     display: flex
@@ -12,13 +13,8 @@
         padding: 0 25px
     &-block
         padding: 20px 29px
-        // background-color: #E7E6E1
         max-height: 90px
         border-bottom: 1px solid #DFDBDC
-        // &::after
-        //     content: ""
-        //     width: 100%
-        //     color: #DFDBDC
         &__avatar
             height: 50px
             width: 50px
@@ -38,10 +34,12 @@
             color: #FFFFFF
 
 .info
-    border: 1px solid red
     width: 100%
     display: flex
+    position: relative
     padding: 16px 21px
+    flex-wrap: wrap
+    // TODO: Make a line after block
     &-main
         width: 325px
         &__avatar
@@ -83,3 +81,57 @@
             &-item
                 border-right: 1px solid #C6C6C6
                 padding-right: 90px
+    &-anomaly
+        margin-top: 80px
+        flex-basis: 100%
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+        &__title
+            margin-left: 17px
+            flex-basis: 100%
+            margin-bottom: 20px
+        &-block
+            box-sizing: border-box
+            font-size: 14px
+            padding: 0px 11px
+            display: flex
+            align-items: center
+            height: 74px
+            width: 404px
+            border: 1px solid #EE144E
+            vertical-align: middle
+            margin-bottom: 73px
+            margin-left: 17px
+            &__img
+                margin-right: 14px
+    &-statistics
+        &__title
+            margin-bottom: 11px
+        &__data
+            flex-basis: 100%
+            width: 1310px
+            height: 195px
+            background: #F3F2F2
+            color: #989898
+            vertical-align: middle
+            text-align: center
+            margin-bottom: 23px
+            &::after
+                content: ''
+                height: 100%
+                display: inline-block
+                vertical-align: middle
+    &-tables
+        display: flex
+        justify-content: space-between
+        flex-basis: 100%
+        &__categories
+            border-collapse: collapse
+            border-spacing: 70px 20px
+        &__sites
+            border-collapse: collapse
+            border-spacing: 70px 20px
+        &__discipline
+            border-collapse: collapse
+            border-spacing: 70px 20px
